ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    cert-manager.io/issuer: selfsigned-issuer
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
    - hosts:
        - nextcloud.localhost
      secretName: nextcloud-tls-certificate
    - hosts:
        - minio.localhost
      secretName: minio-tls-certificate
  rules:
    - host: nextcloud.localhost
      http:
        paths:
          - backend:
              serviceName: nextcloud
              servicePort: 80
    - host: minio.localhost
      http:
        paths:
          - backend:
              serviceName: minio
              servicePort: 9000
